<resources>
    <string name="app_name">Photo Weather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="history_fragment_label">History</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description_weather_photo">weather photo</string>
    <string name="description_weather_captured_photo">weather captured photo</string>
    <string name="description_no_data_image">No data image</string>
    <string name="txt_no_data_available">No data available</string>
    <string name="loading">loading…</string>
    <string name="fab_take_photo_fab_description">Take photo fab description</string>
    <string name="fragment_weather_photo_lable">Capture Photo</string>
    <string name="description_capture_image_button">Capture image button</string>
    <string name="sample_temp_text">22°</string>
    <string name="temp_text">%d°</string>
    <string name="txt_feels_like">Feels Like</string>
    <string name="txt_wind_title">Wind</string>
    <string name="txt_wind">%dkm/h</string>
    <string name="sample_txt_wind">16km/h</string>
    <string name="txt_location">I AM HERE\n%s</string>
    <string name="sample_location">I AM HERE \nAl Maadeyah, EG</string>
    <string name="description_weather_icon">weather icon</string>
    <string name="external_storage__permission_rationale">You should provide read/write external storage permissions, so the app can save the weather photo.</string>
    <string name="location_permission_rationale">You should provide the location permission, so the app can get weather data.</string>
    <string name="camera_permission_rationale">You should provide the camera permission, so the app capture images.</string>
    <string name="description_btn_share_photo">button share photo</string>
</resources>