<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/sv_weather_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/description_weather_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_60dp"
        android:text="@string/sample_temp_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_feels_like_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_feels_like"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toBottomOf="@id/tv_temp" />

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_temp_text"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toBottomOf="@id/tv_feels_like_title" />

    <TextView
        android:id="@+id/tv_wind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_wind_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toBottomOf="@id/tv_feels_like" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_txt_wind"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_title" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/sample_location"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toBottomOf="@id/tv_wind" />

    <ImageView
        android:id="@+id/iv_capture_photo"
        android:layout_width="@dimen/size_capture_iv"
        android:layout_height="@dimen/size_capture_iv"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:contentDescription="@string/description_capture_image_button"
        android:src="@drawable/ic_capture_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>